Minor changes on report

--- a/rapport/cover/cover.tex
+++ b/rapport/cover/cover.tex
@@ -29,7 +29,7 @@
 
     \includegraphics[scale=0.15]{INSA_logo}\\[2cm]
 
-    \textsc{\huge Département Génie Mathémtique}\\[0.7cm]
+    \textsc{\huge Département Génie Mathématique}\\[0.7cm]
     %\textsc{\Large }\\[1.5cm]
 
     % Title
