Worked on report

--- a/rapport/header.tex
+++ b/rapport/header.tex
@@ -3,3 +3,8 @@
 \usepackage[defaultlines=10,all]{nowidow}
 \usepackage{bbm}
 \usepackage{float}
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\lhead{Projet de transcription de musique}
+\rhead{\rightmark}
