Report sent to Fortier

--- a/rapport/cover/cover.tex
+++ b/rapport/cover/cover.tex
@@ -55,7 +55,7 @@
 
 	\vfill
     % Bottom of the page
-    {\large 5 mai 2018}
+    %{\large 5 mai 2018}
   \end{center}
   \end{sffamily}
 \end{titlepage}
