--- a/docs/fr_2018_05_24/include/header.tex
+++ b/docs/fr_2018_05_24/include/header.tex
@@ -1,12 +1,11 @@
 \geometry{paper=a4paper, margin=2.2cm}
-%\renewcommand\refname{Références}
 \usepackage[defaultlines=10,all]{nowidow}
 \usepackage{float}
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\lhead{Projet de transcription de musique}
-\rhead{\rightmark}
+\lhead{\rightmark}
+\rhead{Projet de transcription de musique}
 
 \makeatletter
 \renewcommand{\fps@figure}{H}
@@ -15,8 +14,6 @@
 \AtBeginDocument{\let\maketitle\relax}
 
 %%%%%%%%%%%%%%%% COVER
-
-\usepackage{libertine}
 
 \makeatletter
 \setlength{\parindent}{0cm}
