--- a/docs/fr_2018_06_02/include/cover.tex
+++ b/docs/fr_2018_06_02/include/cover.tex
@@ -10,7 +10,7 @@
     \HRule \\[0.4cm]
     {\huge \bfseries Projet de transcription de musique \\[0.4cm]}
     \HRule \\[1cm]
-	\textsc{\huge rapport d'avancement du projet semestriel}\\[0.7cm]
+	\textsc{\huge Projet semestriel -- semestre 8}\\[0.7cm]
 
     \includegraphics[width=.6\textwidth]{img/cover_img.png}~\\[1cm]
 
@@ -29,7 +29,7 @@
 
 	\vfill
     % Bottom of the page
-    %{\large 5 mai 2018}
+    {\large 11 juin 2018}
   \end{center}
   \end{sffamily}
 \end{titlepage}
