--- a/docs/fr_2018_06_02/include/header.tex
+++ b/docs/fr_2018_06_02/include/header.tex
@@ -13,6 +13,8 @@
 
 \AtBeginDocument{\let\maketitle\relax}
 
+\DeclareUnicodeCharacter{266D}{\ensuremath{\flat}}
+
 %%%%%%%%%%%%%%%% COVER
 
 \makeatletter
