--- a/docs/fr_2018_06_02/references.bib
+++ b/docs/fr_2018_06_02/references.bib
@@ -4,3 +4,47 @@
   year = "2018",
   url = "http://fr.wikipedia.org/w/index.php?title=Chants_hourrites&oldid=145548895",
 }
+
+@article{ yin,
+  author = "Kawahara, Hideki and de Cheveigné, Alain",
+  title = "YIN, a fundamental frequency estimator for speech and music",
+  year = "2002"
+}
+
+@article{ yinfft,
+  author = "Paul Brossier",
+  title = "Automatic Annotation of Musical Audio for Interactive Applications",
+  year = "2007"
+}
+
+@article{ hfc,
+  author = "Paul Masri",
+  title = "Computer modeling of Sound for Transformation and Synthesis of Musical Signal",
+  year = "1996"
+}
+
+@article{ phase,
+  author = "Bello, Juan and Sandler, Mark",
+  title = "Phase-based note onset detection for music signals",
+  year = "2003"
+}
+
+@article{ complex,
+  author = "Duxbury, Chris and Bello, Juan and Davies, Mike and Sandler, Mark",
+  title = "Complex domain onset detection for musical signals",
+  year = "2003"
+}
+
+@article{ ismir,
+  author = "Rosão, Carlos and Ribeiro, Ricardo and de Matos, David Martins",
+  title = "Influence of peak selection methods on onset detection",
+  year = "2012"
+}
+
+@misc{ lstm,
+    author = "{Wikipedia contributors}",
+    title = "Long short-term memory --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2018",
+    url = "https://en.wikipedia.org/w/index.php?title=Long_short-term_memory&oldid=844880987",
+    note = "[Online; accessed 11-June-2018]"
+}
